Modules-help complete

--- a/po/modules-help.po
+++ b/po/modules-help.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2009-07-19 18:21+0200\n"
-"PO-Revision-Date: 2010-11-03 14:48+0300\n"
-"Last-Translator: Ddorda <ddorda@ubuntu.com>\n"
+"PO-Revision-Date: 2010-11-18 15:53+0200\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Gezer\n"
 "Language: he\n"
 "MIME-Version: 1.0\n"
@@ -36,13 +36,39 @@ msgid "@module administration pages"
 msgstr "עמודי הניהול של @module"
 
 #: modules/help/help.module:41
-msgid "This guide provides context sensitive help on the use and configuration of <a href=\"@drupal\">Drupal</a> and its modules, and is a supplement to the more extensive online <a href=\"@handbook\">Drupal handbook</a>. The online handbook may contain more up-to-date information, is annotated with helpful user-contributed comments, and serves as the definitive reference point for all Drupal documentation."
+msgid ""
+"This guide provides context sensitive help on the use and configuration of "
+"<a href=\"@drupal\">Drupal</a> and its modules, and is a supplement to the "
+"more extensive online <a href=\"@handbook\">Drupal handbook</a>. The online "
+"handbook may contain more up-to-date information, is annotated with helpful "
+"user-contributed comments, and serves as the definitive reference point for "
+"all Drupal documentation."
 msgstr ""
+"המדריך מספק עזרה בהתאם להקשר על השימוש והתצורה של <a href=\"@drupal\">דרופל</"
+"a> ושל המודולים הנלווים והוא מהווה השלמה ל<a href=\"@handbook\">ספר ההדרכה "
+"של דרופל</a> המקוון שהוא מקיף יותר. הספר המקוון יכול להכיל מידע עדכני יותר "
+"ומופיעות בו הערות של משתמשים, המדריך משרת כנקודת ההפניה הראשית לכל התיעוד של "
+"דרופל."
 
 #: modules/help/help.module:44
-msgid "The help module provides context sensitive help on the use and configuration of <a href=\"@drupal\">Drupal</a> and its modules, and is a supplement to the more extensive online <a href=\"@handbook\">Drupal handbook</a>. The online handbook may contain more up-to-date information, is annotated with helpful user-contributed comments, and serves as the definitive reference point for all Drupal documentation."
+msgid ""
+"The help module provides context sensitive help on the use and configuration "
+"of <a href=\"@drupal\">Drupal</a> and its modules, and is a supplement to "
+"the more extensive online <a href=\"@handbook\">Drupal handbook</a>. The "
+"online handbook may contain more up-to-date information, is annotated with "
+"helpful user-contributed comments, and serves as the definitive reference "
+"point for all Drupal documentation."
 msgstr ""
+"מודול העזרה מספק עזרה בהתאם להקשר על השימוש והתצורה של <a href=\"@drupal"
+"\">דרופל</a> ושל המודולים הנלווים והוא מהווה השלמה ל<a href=\"@handbook"
+"\">ספר ההדרכה של דרופל</a> המקוון שהוא מקיף יותר. הספר המקוון יכול להכיל "
+"מידע עדכני יותר ומופיעות בו הערות של משתמשים, המדריך משרת כנקודת ההפניה "
+"הראשית לכל התיעוד של דרופל."
 
 #: modules/help/help.module:45
-msgid "For more information, see the online handbook entry for <a href=\"@help\">Help module</a>."
+msgid ""
+"For more information, see the online handbook entry for <a href=\"@help"
+"\">Help module</a>."
 msgstr ""
+"למידע נוסף יש לעיין ברשומה על <a href=\"@help\">מודול העזרה</a> בספר ההדרכה "
+"המקוון."
