--- a/po/modules-search.po
+++ b/po/modules-search.po
@@ -6,23 +6,24 @@
 # search.pages.inc,v 1.4 2007/12/06 09:51:01 goba
 # search.module,v 1.250.2.6 2009/03/10 17:20:01 goba
 # Ddorda <ddorda@ubuntu.com>, 2010.
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2009-07-19 18:21+0200\n"
-"PO-Revision-Date: 2010-10-20 04:12+0300\n"
-"Last-Translator: Ddorda <ddorda@ubuntu.com>\n"
-"Language-Team: Gezer\n"
+"PO-Revision-Date: 2010-11-18 16:10+0300\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
+"Language-Team: Gezer (Hebrew)\n"
 "Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Virtaal 0.5.2\n"
+"X-Generator: Virtaal 0.6.1\n"
 
 #: modules/search/search.admin.inc:13
 msgid "Are you sure you want to re-index the site?"
-msgstr ""
+msgstr "האם אכן ברצונך לסדר את האתר באינדקס מחדש?"
 
 #: modules/search/search.admin.inc:14
 msgid " The search index is not cleared but systematically updated to reflect the new settings. Searching will continue to work but new content won't be indexed until all existing content has been re-indexed. This action cannot be undone."
@@ -30,7 +31,7 @@ msgstr ""
 
 #: modules/search/search.admin.inc:14;52;76
 msgid "Re-index site"
-msgstr ""
+msgstr "סידור האתר מחדש באינדקס"
 
 #: modules/search/search.admin.inc:23;82
 msgid "The index will be rebuilt."
@@ -42,7 +43,7 @@ msgstr ""
 
 #: modules/search/search.admin.inc:50
 msgid "Indexing status"
-msgstr ""
+msgstr "מצב הסידור באינדקס"
 
 #: modules/search/search.admin.inc:57
 msgid "Indexing throttle"
@@ -58,7 +59,7 @@ msgstr ""
 
 #: modules/search/search.admin.inc:60
 msgid "Indexing settings"
-msgstr ""
+msgstr "הגדרות הסידור באינדקס"
 
 #: modules/search/search.admin.inc:61
 msgid "<p><em>Changing the settings below will cause the site index to be rebuilt. The search index is not cleared but systematically updated to reflect the new settings. Searching will continue to work but new content won't be indexed until all existing content has been re-indexed.</em></p><p><em>The default settings should be appropriate for the majority of sites.</em></p>"
@@ -74,7 +75,7 @@ msgstr ""
 
 #: modules/search/search.admin.inc:63
 msgid "Simple CJK handling"
-msgstr ""
+msgstr "טיפול פשוט בסינית, יפנית וקוריאנית"
 
 #: modules/search/search.admin.inc:63
 msgid "Whether to apply a simple Chinese/Japanese/Korean tokenizer based on overlapping sequences. Turn this off if you want to use an external preprocessor for this instead. Does not affect other languages."
@@ -83,8 +84,8 @@ msgstr ""
 #: modules/search/search.admin.inc:47
 msgid "There is 1 item left to index."
 msgid_plural "There are @count items left to index."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "נותר פריט אחד לסידור באינדקס."
+msgstr[1] "נותרו @count פריטים לסידור באינדקס."
 
 #: modules/search/search.pages.inc:29
 msgid "results"
@@ -113,6 +114,9 @@ msgstr "%keys (@type)."
 #: modules/search/search.module:99
 msgid "The search module adds the ability to search for content by keywords. Search is often the only practical way to find content on a large site, and is useful for finding both users and posts."
 msgstr ""
+"מודול החיפוש מוסיף את האפשרות לחפש אחר תוכן לפי מילות מפתח. החיפוש לעתים הוא "
+"הדרך המעשית היחידה למצוא תוכן באתר גדול, המודול יעיל גם בחיפוש אחר משתמשים "
+"וגם אחר רשומות."
 
 #: modules/search/search.module:100
 msgid "To provide keyword searching, the search engine maintains an index of words found in your site's content. To build and maintain this index, a correctly configured <a href=\"@cron\">cron maintenance task</a> is required. Indexing behavior can be adjusted using the <a href=\"@searchsettings\">search settings page</a>; for example, the <em>Number of items to index per cron run</em> sets the maximum number of items indexed in each pass of a <a href=\"@cron\">cron maintenance task</a>. If necessary, reduce this number to prevent timeouts and memory errors when indexing."
@@ -121,6 +125,8 @@ msgstr ""
 #: modules/search/search.module:101
 msgid "For more information, see the online handbook entry for <a href=\"@search\">Search module</a>."
 msgstr ""
+"למידע נוסף, יש לעיין ברשומת המדריך המעשי ל<a href=\"@system\">מודול "
+"החיפוש</a>."
 
 #: modules/search/search.module:104
 msgid "The search engine maintains an index of words found in your site's content. To build and maintain this index, a correctly configured <a href=\"@cron\">cron maintenance task</a> is required. Indexing behavior can be adjusted using the settings below."
@@ -136,15 +142,17 @@ msgstr "טופס חיפוש"
 
 #: modules/search/search.module:922
 msgid "You must include at least one positive keyword with @count characters or more."
-msgstr ""
+msgstr "עליך לכלול לפחות מילת מפתח חיובית אחת בעלת @count תווים ומעלה."
 
 #: modules/search/search.module:926
 msgid "Search for either of the two terms with uppercase <strong>OR</strong>. For example, <strong>cats OR dogs</strong>."
 msgstr ""
+"חיפוש אחר לפחות אחד מבין שני המונחים עם המילה <strong>OR</strong> באותיות "
+"גדולות. לדוגמה: <strong>חתולים OR כלבים</strong>."
 
 #: modules/search/search.module:1033
 msgid "Enter your keywords"
-msgstr "יש להכניס מלות מפתח"
+msgstr "יש להכניס מילות מפתח"
 
 #: modules/search/search.module:1067
 msgid "Search this site"
@@ -172,16 +180,16 @@ msgstr "הגדרות חיפוש"
 
 #: modules/search/search.module:177
 msgid "Configure relevance settings for search and other indexing options"
-msgstr ""
+msgstr "הגדרת תצורת הרלוונטיות לחיפוש ולאפשרויות נוספות לסידור באינדקס"
 
 #: modules/search/search.module:185
 msgid "Clear index"
-msgstr ""
+msgstr "פינוי האינדקס"
 
 #: modules/search/search.module:193
 msgid "Top search phrases"
-msgstr ""
+msgstr "ביטויי החיפוש המובילים"
 
 #: modules/search/search.module:194
 msgid "View most popular search phrases."
-msgstr ""
+msgstr "צפייה בביטויי החיפוש הפופולריים ביותר."
