--- a/po/modules-search.po
+++ b/po/modules-search.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2009-07-19 18:21+0200\n"
-"PO-Revision-Date: 2010-11-18 16:15+0300\n"
+"PO-Revision-Date: 2010-11-22 09:02+0300\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Gezer (Hebrew)\n"
 "Language: he\n"
@@ -59,6 +59,9 @@ msgstr "מספר הפריטים לסידור באינדקס בכל הפעלה ש
 #: modules/search/search.admin.inc:58
 msgid "The maximum number of items indexed in each pass of a <a href=\"@cron\">cron maintenance task</a>. If necessary, reduce the number of items to prevent timeouts and memory errors while indexing."
 msgstr ""
+"המספר המרבי של פריטים שיסודרו באינדקס בכל שלב של <a href=\"@cron\">משימת "
+"התחזוקה של cron</a>. במידת הצורך, יש לצמצם את מספר הפריטים כדי למנוע חריגות "
+"מהזמן המוקצב ושגיאות זיכרון בעת הסידור."
 
 #: modules/search/search.admin.inc:60
 msgid "Indexing settings"
@@ -70,7 +73,7 @@ msgstr ""
 
 #: modules/search/search.admin.inc:62
 msgid "Minimum word length to index"
-msgstr ""
+msgstr "אורך המילה המזערי לסידור באינדקס"
 
 #: modules/search/search.admin.inc:62
 msgid "The number of characters a word has to be to be indexed. A lower setting means better search result ranking, but also a larger database. Each search query must contain at least one keyword that is this size (or longer)."
@@ -83,6 +86,9 @@ msgstr "טיפול פשוט בסינית, יפנית וקוריאנית"
 #: modules/search/search.admin.inc:63
 msgid "Whether to apply a simple Chinese/Japanese/Korean tokenizer based on overlapping sequences. Turn this off if you want to use an external preprocessor for this instead. Does not affect other languages."
 msgstr ""
+"האם להחיל מפריד פשוט לאסימונים לשפות סינית/יפנית/קוריאנית בהתבסס על רצפים "
+"חופפים. יש לכבות זאת אם ברצונך להשתמש במעבד טרומי חיצוני במקום. לא משפיע על "
+"שפות אחרות."
 
 #: modules/search/search.admin.inc:47
 msgid "There is 1 item left to index."
