--- a/po/general.po
+++ b/po/general.po
@@ -133,7 +133,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Drupal 6 stable - General\n"
 "POT-Creation-Date: 2009-07-19 18:21+0200\n"
-"PO-Revision-Date: 2010-07-19 11:54+0200\n"
+"PO-Revision-Date: 2010-11-22 09:08+0200\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Gezer <gezer@lists.launchpad.net>\n"
 "MIME-Version: 1.0\n"
@@ -1108,9 +1108,8 @@ msgid "status"
 msgstr "מצב"
 
 #: modules/node/node.admin.inc:247;313 modules/user/user.admin.inc:73;98
-#, fuzzy
 msgid "Refine"
-msgstr "עידון"
+msgstr "שיפור"
 
 #: modules/node/node.admin.inc:249;325 modules/user/user.admin.inc:78;108
 msgid "Undo"
