--- a/po/modules-search.po
+++ b/po/modules-search.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2009-07-19 18:21+0200\n"
-"PO-Revision-Date: 2010-11-22 09:14+0300\n"
+"PO-Revision-Date: 2010-11-22 09:31+0300\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Gezer (Hebrew)\n"
 "Language: he\n"
@@ -42,7 +42,7 @@ msgstr "האינדקס ייבנה מחדש."
 
 #: modules/search/search.admin.inc:49
 msgid "%percentage of the site has been indexed."
-msgstr ""
+msgstr "%percentage מהאתר כבר סודרו באינדקס."
 
 #: modules/search/search.admin.inc:50
 msgid "Indexing status"
@@ -138,6 +138,14 @@ msgstr ""
 #: modules/search/search.module:100
 msgid "To provide keyword searching, the search engine maintains an index of words found in your site's content. To build and maintain this index, a correctly configured <a href=\"@cron\">cron maintenance task</a> is required. Indexing behavior can be adjusted using the <a href=\"@searchsettings\">search settings page</a>; for example, the <em>Number of items to index per cron run</em> sets the maximum number of items indexed in each pass of a <a href=\"@cron\">cron maintenance task</a>. If necessary, reduce this number to prevent timeouts and memory errors when indexing."
 msgstr ""
+"כדי לספק חיפוש לפי מילות מפתח, מסד הנתונים מחזיק באינדקס של מילים שנמצאות "
+"בתוכן האתר שלך. כדי לבנות ולתחזק את האינדקס הזה, נדרשת <a href=\"@cron\">משימת "
+"תחזוקה של cron</a> שמוגדרת כראוי. התנהגות הסידור באינדקס ניתנת לכוונון דרך "
+"<a href=\"@searchsettings\">עמוד הגדרות החיפוש</a>; לדוגמה, <em>מספר הפריטים "
+"לסידור באינדקס לכל הפעלה של cron</em> מגדיר את המספר המרבי של פריטים שיסודרו "
+"באינדקס בכל שלב של <a href=\"@cron\">משימת התחזוקה של cron</a>. במידת הצורך "
+"ניתן להקטין מספר זה כדי למנוע חריגות מהזמן המוקצב ושגיאות זיכרון בעת הסידור "
+"באינדקס."
 
 #: modules/search/search.module:101
 msgid "For more information, see the online handbook entry for <a href=\"@search\">Search module</a>."
@@ -148,10 +156,20 @@ msgstr ""
 #: modules/search/search.module:104
 msgid "The search engine maintains an index of words found in your site's content. To build and maintain this index, a correctly configured <a href=\"@cron\">cron maintenance task</a> is required. Indexing behavior can be adjusted using the settings below."
 msgstr ""
+"מסד הנתונים מחזיק באינדקס של מילים שנמצאות בתוכן האתר שלך. כדי לבנות ולתחזק "
+"את האינדקס הזה, נדרשת <a href=\"@cron\">משימת תחזוקה של cron</a> שמוגדרת "
+"כראוי. התנהגות הסידור באינדקס ניתנת לכוונון דרך ההגדרות שלהלן."
 
 #: modules/search/search.module:106
 msgid "<ul>\n<li>Check if your spelling is correct.</li>\n<li>Remove quotes around phrases to match each word individually: <em>\"blue smurf\"</em> will match less than <em>blue smurf</em>.</li>\n<li>Consider loosening your query with <em>OR</em>: <em>blue smurf</em> will match less than <em>blue OR smurf</em>.</li>\n</ul>"
 msgstr ""
+"<ul>\n"
+"<li>נא לבדוק את האיות שלך.</li>\n"
+"<li>יש להסיר סימני ציטוט ממונחים מאוגדים כדי לחפש התאמות לכל מילה בנפרד: "
+"<em>\"דרדס כחול\"</em> ישיג פחות התאמות מאשר <em>דרדס כחול</em>.</li>\n"
+"<li>באפשרותך לנסות לרכך את שאילתת החיפוש שלך באמצעות <em>OR</em>: <em>דרדס "
+"כחול</em> תקבל פחות התאמות מאשר <em>דרדס OR כחול</em>.</li>\n"
+"</ul>"
 
 #: modules/search/search.module:152
 msgid "Search form"
