--- a/modules/privatemsg/privatemsg_filter/he.po
+++ b/modules/privatemsg/privatemsg_filter/he.po
@@ -6,19 +6,21 @@
 # privatemsg_filter.module,v 1.1.2.30 2009/11/23 19:54:49 berdir
 # privatemsg_filter.info,v 1.1.2.1 2009/01/25 23:25:18 litwol
 # Ddorda <ddorda@ubuntu.com>, 2010.
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2010-04-12 13:53+0200\n"
-"PO-Revision-Date: 2010-11-16 00:15+0300\n"
-"Last-Translator: Ddorda <ddorda@ubuntu.com>\n"
-"Language-Team: Gezer\n"
+"PO-Revision-Date: 2011-06-08 11:59+0300\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
+"Language-Team: Gezer (Hebrew)\n"
 "Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Virtaal 0.5.2\n"
+"X-Generator: Virtaal 0.7.0-beta5\n"
+"X-Project-Style: default\n"
 
 #: privatemsg_filter/privatemsg_filter.admin.inc:13 privatemsg_filter/privatemsg_filter.module:157;344;550;687;33
 msgid "Tags"
@@ -30,7 +32,7 @@ msgstr "תגית"
 
 #: privatemsg_filter/privatemsg_filter.admin.inc:24
 msgid "Usage"
-msgstr ""
+msgstr "ניצול"
 
 #: privatemsg_filter/privatemsg_filter.admin.inc:30;92
 msgid "Public"
@@ -110,11 +112,13 @@ msgstr ""
 
 #: privatemsg_filter/privatemsg_filter.module:134
 msgid "Position of the tagging textfield"
-msgstr ""
+msgstr "מיקום תיבת הטקסט של התיוג"
 
 #: privatemsg_filter/privatemsg_filter.module:135
 msgid "Use higher values to push the form lower down the page, lower or negative values to raise it higher."
 msgstr ""
+"ניתן להשתמש בערך גבוה יותר כדי להציב את הטופס נמוך יותר בעמוד, ערכים נמוכים "
+"יותר או שליליים יגביהו אותו."
 
 #: privatemsg_filter/privatemsg_filter.module:152;77
 msgid "Inbox"
@@ -126,11 +130,12 @@ msgstr "כל ההודעות"
 
 #: privatemsg_filter/privatemsg_filter.module:153
 msgid "Choose the default list option"
-msgstr ""
+msgstr "בחירת אפשרות בררת המחדל לרשימה"
 
 #: privatemsg_filter/privatemsg_filter.module:154
 msgid "Choose which of the two lists are shown by default when following the messages link."
 msgstr ""
+"בחירה בין איזה משתי הרשימות תופיע כבררת מחדל בעת לחיצה על קישור ההודעות."
 
 #: privatemsg_filter/privatemsg_filter.module:199
 msgid "Tag %tag was ignored because you do not have permission to create new tags."
