--- a/modules/author_pane/translations/root.he.po
+++ b/modules/author_pane/translations/root.he.po
@@ -14,96 +14,105 @@
 # author_pane.info,v 1.1.2.5.2.1 2009/07/22 04:34:24 michellec
 # author_pane.info,v 1.1.2.5.2.2 2010/10/04 15:33:48 michellec
 # Ddorda <ddorda@ubuntu.com>, 2010.
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: Author Pane (all releases)\n"
 "POT-Creation-Date: 2010-11-15 22:59+0000\n"
-"PO-Revision-Date: 2010-11-16 01:05+0300\n"
-"Last-Translator: Ddorda <ddorda@ubuntu.com>\n"
-"Language-Team: Gezer\n"
+"PO-Revision-Date: 2011-06-08 12:13+0300\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
+"Language-Team: Gezer (Hebrew)\n"
 "Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Virtaal 0.5.2\n"
+"X-Generator: Virtaal 0.7.0-beta5\n"
+"X-Project-Style: default\n"
 
 #: author-pane.tpl.php:109
 msgid "Title"
-msgstr ""
+msgstr "כותרת"
 
 #: author-pane.tpl.php:102
 msgid "!time ago"
-msgstr ""
+msgstr "לפני !time"
 
 #: author_pane.module:203,210,178,174,195,199
 msgid "Online"
-msgstr ""
+msgstr "מקוון"
 
 #: author_pane.module:228,250,257,254,262
 msgid "Anonymous"
-msgstr ""
+msgstr "אלמוני"
 
 #: author_pane.module:293,299,230
 msgid "View user profile."
-msgstr ""
+msgstr "צפייה בפרופיל המשתמש."
 
 #: author_pane.module:36,59
 msgid "Image path"
-msgstr ""
+msgstr "נתיב לתמונה"
 
 #: author_pane.module:207,214,182,178,199,203
 msgid "Offline"
-msgstr ""
+msgstr "מנותק"
 
 #: author_pane.module:279,285,216,228,250,257,254,262
 msgid "@user's picture"
-msgstr ""
+msgstr "התמונה של @user"
 
 #: author_pane.module:29,52
 msgid ""
 "Template file to use. Do not include .tpl.php. Default is "
 "author-pane-block."
 msgstr ""
+"קובץ תבנית לשימוש. אין להוסיף את הסיומת .tpl.php. בררת המחדל היא author-"
+"pane-block."
 
 #: author_pane.module:37,60
 msgid "Path to author pane images.  Leave blank to use default."
-msgstr ""
+msgstr "הנתיב לתמונות נתיב המחבר.  יש להשאיר ריק כדי להשתמש בבררת המחדל."
 
 #: author_pane.module:50,73,58,62,64,65
 msgid "Node types to display on"
-msgstr ""
+msgstr "סוג הצמתים להצגה"
 
 #: author_pane.module:67,90,75,79,81,83
 msgid ""
 "Imagecache preset to use for the user picture on this block. Leave "
 "blank to not use this feature."
 msgstr ""
+"ערכות מטמון תמונות לשימוש עבור תמונות המשתמשים בתיבה זו. יש להשאיר ריק כדי "
+"לא להשתמש בתכונה זו."
 
 #: author_pane.module:84,107,90,95,97,99
 msgid "Author Information"
-msgstr ""
+msgstr "פרטי המחבר"
 
 #: author_pane.module:202,209
 msgid "User is online"
-msgstr ""
+msgstr "המשתמש מקוון"
 
 #: author_pane.module:206,213
 msgid "User offline. Last seen @time ago."
-msgstr ""
+msgstr "המשתמש מנותק. פעילות אחרונה לפני @time."
 
 #: author_pane.info:0
 msgid ""
 "Gathers information from user related contrib modules into one "
 "template."
 msgstr ""
+"התכונה הזו אוספת פרטים ממודולי תרומה (contrib) הקשורים במשתמש לתבנית אחת."
 
 #: author_pane.info:0
 msgid ""
 "Gathers information from core and user related contrib modules and "
 "displays it in a template."
 msgstr ""
+"התכונה הזו אוספת מידע ממודולי תרומה (contrib) של הליבה או מאלו הקשורים "
+"במשתמש ומציגה אותו בתבנית."
 
 #: author-pane.tpl.php:102
 msgid "Last seen"
-msgstr ""
+msgstr "פעילות אחרונה"
