--- a/modules/author_pane/modules/translations/modules.he.po
+++ b/modules/author_pane/modules/translations/modules.he.po
@@ -23,80 +23,82 @@
 # user_relationships_api.author-pane.inc,v 1.1.2.5.2.3 2009/08/19 02:37:06 michellec
 # user_relationships_api.author-pane.inc,v 1.1.2.5.2.5 2009/11/13 04:45:00 michellec
 # Ddorda <ddorda@ubuntu.com>, 2010.
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: Author Pane (all releases)\n"
 "POT-Creation-Date: 2010-11-15 22:59+0000\n"
-"PO-Revision-Date: 2010-11-16 01:04+0300\n"
-"Last-Translator: Ddorda <ddorda@ubuntu.com>\n"
-"Language-Team: Gezer\n"
+"PO-Revision-Date: 2011-06-08 16:24+0300\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
+"Language-Team: Gezer (Hebrew)\n"
 "Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Virtaal 0.5.2\n"
+"X-Generator: Virtaal 0.7.0-beta5\n"
+"X-Project-Style: default\n"
 
 #: modules/og.author-pane.inc:24,41,57
 msgid "None"
-msgstr ""
+msgstr "אין"
 
 #: modules/contact.author-pane.inc:18,23,25
 msgid "Email"
-msgstr ""
+msgstr "דוא״ל"
 
 #: modules/privatemsg.author-pane.inc:21,16
 msgid "Send private message"
-msgstr ""
+msgstr "שליחת הודעה פרטית"
 
 #: modules/buddylist.author-pane.inc:23
 msgid "Remove from buddylist"
-msgstr ""
+msgstr "הסרה מרשימת החברים"
 
 #: modules/buddylist.author-pane.inc:33
 msgid "Add to buddylist"
-msgstr ""
+msgstr "הוספה לרשימת החברים"
 
 #: modules/contact.author-pane.inc:20,23
 msgid "Contact user"
-msgstr ""
+msgstr "יצירת קשר המשתמש"
 
 #: modules/privatemsg.author-pane.inc:25,18
 msgid "Send PM"
-msgstr ""
+msgstr "שליחת ה״פ"
 
 #: modules/troll.author-pane.inc:17,22
 msgid "Ban IP"
-msgstr ""
+msgstr "חסימת ה־IP"
 
 #: modules/user_relationships_api.author-pane.inc:34,33,39,38,44
 msgid "Remove from @rel_plural_name"
-msgstr ""
+msgstr "הסרה מהקבוצה @rel_plural_name"
 
 #: modules/user_relationships_api.author-pane.inc:49
 msgid "Remove @name from @rel_plural_name"
-msgstr ""
+msgstr "הסרת @name מהקבוצה @rel_plural_name"
 
 #: modules/user_relationships_api.author-pane.inc:61,51,56
 msgid "Add @rel_name"
-msgstr ""
+msgstr "הוספת @rel_name"
 
 #: modules/user_relationships_api.author-pane.inc:76
 msgid "Add @name as a @rel_name"
-msgstr ""
+msgstr "הוספת @name בתור @rel_name"
 
 #: modules/user_relationships_api.author-pane.inc:82,63,68
 msgid "Become @name's @rel_name"
-msgstr ""
+msgstr "הצטרפות כ@rel_name של @name"
 
 #: modules/user_relationships_api.author-pane.inc:104,85,90
 msgid "+%rel_name"
-msgstr ""
+msgstr "+%rel_name"
 
 #: modules/user_relationships_api.author-pane.inc:110,91,96
 msgid "Become %name's %rel_name"
-msgstr ""
+msgstr "הצטרפות כrel_name% של %name"
 
 #: modules/user_relationships_api.author-pane.inc:57,62
 msgid "Add as a @rel_name"
-msgstr ""
+msgstr "הוספה בתור @rel_name"
