--- a/modules/author_pane/plugins/content_types/translations/plugins-content_types.he.po
+++ b/modules/author_pane/plugins/content_types/translations/plugins-content_types.he.po
@@ -1,30 +1,36 @@
 # Hebrew translation of Author Pane (all releases)
 # Copyright (c) 2010 by the Hebrew translation team
 # Generated from files:
-#  author_pane.inc,v 1.1.2.2.2.2 2009/09/07 04:45:42 michellec
-#  author_pane.inc,v 1.1.2.2.2.3 2010/06/08 04:14:50 michellec
-#  author_pane.inc,v 1.1.2.2.2.5 2010/10/04 14:59:56 michellec
-#
+# author_pane.inc,v 1.1.2.2.2.2 2009/09/07 04:45:42 michellec
+# author_pane.inc,v 1.1.2.2.2.3 2010/06/08 04:14:50 michellec
+# author_pane.inc,v 1.1.2.2.2.5 2010/10/04 14:59:56 michellec
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: Author Pane (all releases)\n"
 "POT-Creation-Date: 2010-11-15 22:59+0000\n"
-"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
-"Language-Team: Hebrew\n"
+"PO-Revision-Date: 2011-06-08 16:28+0300\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
+"Language-Team: Gezer (Hebrew)\n"
+"Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Virtaal 0.7.0-beta5\n"
+"X-Project-Style: default\n"
 
 #: plugins/content_types/author_pane.inc:59
 msgid ""
 "Imagecache preset to use for forum avatars. Leave blank to not use "
 "this feature."
 msgstr ""
+"תצורת מטמון התמונות לשימוש עבור תמונות הפורום. ניתן להשאיר ריק כדי לא להשתמש "
+"בתכונה זו."
 
 #: plugins/content_types/author_pane.inc:66,74
 msgid "Caller"
-msgstr ""
+msgstr "קורא"
 
 #: plugins/content_types/author_pane.inc:68,76
 msgid ""
@@ -32,10 +38,13 @@ msgid ""
 "preprocessing for specific changes. If using this in Advanced Profile "
 "Kit, it should be set to \"advanced_profile\""
 msgstr ""
+"שם התכנית שקוראת. ניתן לקלוט שם זה במהלך עיבוד קדם לשינוי מסוים. אם נעשה "
+"שימוש בערכת פרופיל מתקדמת, צריך להגדיר זאת בתור \"advanced_profile\""
 
 #: plugins/content_types/author_pane.inc:59,67
 msgid ""
 "Imagecache preset to use for user picture. Leave blank to not use this "
 "feature."
 msgstr ""
-
+"ערכת מטמון התמונות לצורך תמונות משתמשים. ניתן להשאיר ריק כדי לא להשתמש "
+"בתכונה זו."
